# oz_FastAPI

./: .gitignore  configtest.py  conftest.py  main.py  pyproject.toml  temp.py  test.sh  test_simple.py  test_temp.py
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py
app/configs/: __init__.py  base_config.py  tortoise_config.py
app/dtos/: create_meeting_response.py  get_meeting_response.py
app/queries/meeting/: create_meeting_async_edgeql.py  get_meeting_by_url_code.edgeql  get_meeting_by_url_code_async_edgeql.py
app/tests/apis/v1/: test_meeting_router_mysql.py
app/tests/v1/: test_meeting_router_edgedb.py
app/tortoise_models/: base_model.py  meeting.py
app/utils/: base62.py
migrations/models/: 0_20250602105156_init.py
